[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cribl"
version = "1.0.1"
authors = [
  { name="Rob Franz", email="rfranz@cribl.io" },
]
description = "Cribl Python API Wrapper Module"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "requests",
    "inflection"
]
